--- a/fly.toml
+++ b/fly.toml
@@ -17,6 +17,7 @@ processes = []
 [env]
   PORT = "8080"
   SERVER_COMMAND = "bin/rails fly:server"
+  RAILS_ENV="production"
 
 [experimental]
   allowed_public_ports = []
