--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "portfolio",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
-    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
+    "@hotwired/turbo-rails": "^7.2.2",
     "@popperjs/core": "^2.11.5",
     "@rails/actioncable": "^7.0.3-1",
     "@rails/activestorage": "^7.0.3-1",
-    "@rails/ujs": "^7.0.3-1",
-    "@rails/webpacker": "5.4.3",
-    "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
-  "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "^3"
+  "scripts": {
+    "build": "webpack --config webpack.config.js"
   }
 }
