--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@rails/actioncable": "^7.0.3-1",
     "@rails/activestorage": "^7.0.3-1",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
